add all the other options back